$Id: History,v 1.1 1999-01-08 16:34:40 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 03 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

9th August 1998  John Allison
- Changed G4UIterminal to G4UIGAG.

7th August 1998  John Allison
- Copied here from examples/novices/N06.

April 09, 98 G. Cosmo

- Created.