@@ -20,12 +20,12 @@ class Tst03RunAction : public G4UserRunAction
   public:
 
     Tst03RunAction();
-    ~Tst03RunAction();
+    virtual ~Tst03RunAction();
 
   public:
 
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    virtual void BeginOfRunAction(const G4Run* aRun);
+    virtual void EndOfRunAction(const G4Run* aRun);
 
   private:
 
