@@ -23,9 +23,9 @@ Tst03RunAction::~Tst03RunAction()
   delete timer;
 }
 
-void Tst03RunAction::BeginOfRunAction(G4Run* aRun)
+void Tst03RunAction::BeginOfRunAction(const G4Run* aRun)
 {
-  aRun->SetRunID(runIDcounter++);
+  ((G4Run*)(aRun))->SetRunID(runIDcounter++);
 
   G4UImanager* UI = G4UImanager::GetUIpointer();
   //UI->ApplyCommand("/event/verbose 1");
@@ -35,7 +35,7 @@ void Tst03RunAction::BeginOfRunAction(G4Run* aRun)
   timer->Start();
 }
 
-void Tst03RunAction::EndOfRunAction(G4Run* aRun)
+void Tst03RunAction::EndOfRunAction(const G4Run* aRun)
 {
   timer->Stop();
   //G4cout << "number of event = " << aRun->GetNumberOfEvent() 
