@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:34:40 gunter Exp $
+$Id: History,v 1.2 1999-04-17 04:23:49 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst03PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst03RunAction
 
 9th August 1998  John Allison
 - Changed G4UIterminal to G4UIGAG.
